fixed from lesson 004 the pictures were not lining in a row at the smallest break on tablet-it was staying 4 pictures across-lesson 5 added mobile break points in styles

--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ header nav ul li{
 	padding: 0;	
 	text-align: center;
 }
-#feature li{
+#featured li{
 	width: 48%;	
 }
 footer ul{
@@ -216,6 +216,43 @@ footer ul{
 }
 /*mobiles*/
 @media screen and (max-width: 480px){
+
+#featured li{
+	width: 90%;	
+	margin: 20px 5%;
+}
+footer ul{
+	width: 98%;
+	text-align: center;	
+}	
+	
+#home-menu li{
+	float: none;
+	width: 96%;
+	margin: 30px 2% !important;
+}	
+#main-banner img{
+	position: relative;
+	width: 180%;
+	left: -40%;
+}
+		
+}
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
 	
 }
 	
